end of workshop

--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -177,7 +177,7 @@ people {
 
 <h3>Group shot</h3>
 
-<img src="groupphoto.jpg" width="90%">
+<img src="groupphoto.jpg" style="width:90%" class="center" vspace="20">
 
 
 <br/>
