--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -130,7 +130,7 @@ people {
 <tr class="odd">
 <td><strong>3:00 PM - 4:00 PM</strong></td>
 <td><people>Hyunjung Joo</people> (Rutgers)</td>
-<td><talk>Intonation as Local Logical Interpretations</talk></td>
+<td><talk>Intonation as Local Logical Interpretations</talk> [<a href="pdfs/joo-intonation.pdf">handout pdf</a>]</td>
 </tr>
 <tr class="even">
 <td>4:00 PM - 4:15 PM</td>
@@ -155,7 +155,7 @@ people {
 <tr class="odd">
 <td><strong>9:00 AM - 10:00 AM</strong></td>
 <td><people>Magdalena Markowska</people> (Stony Brook)</td>
-<td><talk>Learning Processes with Features</talk></td>
+<td><talk>Learning Processes with Features</talk> [<a href="pdfs/markowska-featurelearning.pdf">handout pdf</a>]</td>
 </tr>
 <tr class="even">
 <td>10:00 AM - 10:15 AM</td>
@@ -177,7 +177,7 @@ people {
 
 <h3>Group shot</h3>
 
-<img src="groupphoto.jpg" style="width:90%" class="center" vspace="20">
+<img src="groupphoto.jpg" style="width:90%" vspace="20">
 
 
 <br/>
