vinny and han slides

--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -140,7 +140,7 @@ people {
 <tr class="odd">
 <td><strong>4:15 PM - 5:15 PM</strong></td>
 <td><people>Vincent Czarnecki</people> (Rutgers)</td>
-<td><talk>Linearization and a Local Syntax-Phonology Interface</talk></td>
+<td><talk>Linearization and a Local Syntax-Phonology Interface</talk> [<a href="pdfs/czarnecki-interface.pdf">handout pdf</a>]</td>
 </tr>
 <tr class="even">
 <td>5:30 PM -</td>
@@ -169,7 +169,7 @@ people {
 </tr class="even">
 <td></td>
 <td>(Stony Brook)</td>
-<td>[<a href="pdfs/swanson-bufia.pdf">Logan slides</a>]</td>
+<td>[<a href="pdfs/swanson-bufia.pdf">Logan slides</a>][<a href="pdfs/li-bufiatone.pdf">Han slides</a>]</td>
 <tr>
 </tr>
 </tbody>
