--- a/workshop2024/index.html
+++ b/workshop2024/index.html
@@ -169,7 +169,7 @@ people {
 </tr class="even">
 <td></td>
 <td>(Stony Brook)</td>
-<td>[<a href="pdfs/swanson-bufia.pdf">Logan slides</a>][<a href="pdfs/li-bufiatone.pdf">Han slides</a>]</td>
+<td>[<a href="pdfs/swanson-bufia.pdf">Logan slides</a>][<a href="pdfs/payne-positiveBUFIA.pdf">Sarah slides</a>][<a href="pdfs/li-bufiatone.pdf">Han slides</a>]</td>
 <tr>
 </tr>
 </tbody>
