--- a/mathling/archive.html
+++ b/mathling/archive.html
@@ -35,6 +35,41 @@ a:hover {
 	
 <a href="index.html">(back to main page)</a>
 
+<!------- Fall 2024 SCHEDULE  -------->	
+<h3>Fall 2024 Schedule</h3>
+
+<p>
+    Every other Monday, 9am, Rm 319 at 1 Spring Street
+</p>
+
+<ul>
+    <li>
+        <b>Sept 9</b> Organizational meeting (joint w/ PhonX)
+    </li>
+    <li>
+        <b>Sept 23</b> Introduction to learning (Prof. Adam Jardine)<br>
+        <b>Reading:</b> <a href="https://drive.google.com/file/d/1BPGKpL-NNSSR531-9LH3CVwzIHku6B4M/view?usp=drive_link">Heinz and Jardine, ms., 'Learning Phonological Grammars'</a> 
+    </li>
+    <li>
+        <b>Oct 7</b> Learnability in the limit <br>
+    </li>
+    <li>
+        <b>Oct 21</b> Learnability in the limit <br>
+    </li>
+    <li>
+        <b>Nov 11</b> Learnability in the limit <br>
+    </li>
+    <li>
+        <b>Nov 25</b> Strictly Local Grammar <br>
+    </li>
+    <li>
+        <b>Dec 2</b> Identification in the limit of positive data (IDLP) <br>
+    </li>
+
+</ul>
+
+<hr>
+
 <!------- Spring 2024 SCHEDULE  -------->
 <h3>Spring 2024 Schedule</h3>
 
