--- a/mathling/index.html
+++ b/mathling/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+B<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -45,7 +45,7 @@ a:hover {
         <td>
 	          Chenli Wang<br>
 		  Vincent Czarnecki<br>
-	          Hyunjung Joo<br>
+	          Merlin Balkhash<br>
 	      </p>
         </td>
     </tr>
@@ -65,28 +65,45 @@ a:hover {
 <hr>
 
 <!------- Spring 2024 SCHEDULE  -------->	
-<h3>Fall 2024 Schedule</h3>
+<h3>Spring 2025 Schedule</h3>
 
 <p>
-    Every other Monday, 9am, Rm 319 at 1 Spring Street
+    Wednesday, 11am, Rm 403 at 1 Spring Street
 </p>
 
 <ul>
     <li>
-        <b>Sept 9</b> Organizational meeting (joint w/ PhonX)
+        <b>Jan 22</b> Organizational Meeting (joint w/ PhonX)
     </li>
     <li>
-        <b>Sept 23</b> Intro to Learning (Prof. Adam Jardine)<br>
-        <b>Reading:</b> <a href="https://drive.google.com/file/d/1BPGKpL-NNSSR531-9LH3CVwzIHku6B4M/view?usp=drive_link">Heinz and Jardine, ms., 'Learning Phonological Grammars'</a> 
+        <b>Feb 5</b> Review on Learning <br>
+        <b>Reading:</b> <a href="https://drive.google.com/file/d/19UwYerrt7kXgcqKxBqAubEXXKwHoDoLu/view?usp=share_link">Heinz (2016). 'Computational theories of learning and developmental psycholinguistics'</a>
     </li>
     <li>
-        <b>Oct 7</b> TBD <br>
+        <b>Feb 12</b> Learning Functions <br>
+	<b>Meeting Notes:</b> <a href="https://drive.google.com/file/d/1s4JE57-6BzvFzWxPMNHiVElmDsqaSdjN/view?usp=sharing">Introduction to Functions </a>
     </li>
     <li>
-        <b>Oct 21</b> TBD <br>
+        <b>Feb 26</b> Learning Functions <br>
+	<b>Reading:</b> <a href="https://drive.google.com/file/d/15W_x9eT5SBOrEvkrjPR0nFD9O4gPvyvT/view?usp=share_link">Chap.2&3, Chandlee (2014). 'Strictly local phonological processes'</a>
     </li>
     <li>
-        <b>Nov 11</b> TBD <br>
+        <b>Mar 5</b> Learning Functions <br>
+    </li>
+    <li>
+        <b>Mar 19</b> spring break <br>
+    </li>
+    <li>
+        <b>Mar 26</b> Angluin/Probabilistic Gold <br>
+    </li>
+    <li>
+        <b>Apr 9</b> PAC learning <br>
+    </li>
+    <li>
+        <b>Apr 16</b> TBD <br>
+    </li>
+    <li>
+        <b>Apr 23</b> TBD <br>
     </li>
 
 </ul>
