--- a/mathling/index.html
+++ b/mathling/index.html
@@ -27,7 +27,7 @@ a:hover {
 </head>
 
 <body style="margin: 3% 25% 5% 15%">
-<!-- <img style="width:660px;height:200px" src="lab.jpg"> -->
+<!-- <img style="width:660px;height:200px" src="mathling.jpg"> -->
 
 <h1 id="rucll">Rutgers MathLing Group</h1>
 
