--- a/mathling/index.html
+++ b/mathling/index.html
@@ -1,4 +1,4 @@
-B<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -27,7 +27,7 @@ a:hover {
 </head>
 
 <body style="margin: 3% 25% 5% 15%">
-<img src="mathling.jpg" width="100%">
+<!-- <img style="width:660px;height:200px" src="lab.jpg"> -->
 
 <h1 id="rucll">Rutgers MathLing Group</h1>
 
