--- a/mathling/index.html
+++ b/mathling/index.html
@@ -77,7 +77,7 @@ a:hover {
     </li>
     <li>
         <b>Feb 5</b> Review on Learning <br>
-        <b>Reading:</b> <a href="https://drive.google.com/file/d/19UwYerrt7kXgcqKxBqAubEXXKwHoDoLu/view?usp=share_link">Heinz (2016). 'Computational theories of learning and developmental psycholinguistics'</a>
+        <b>Reading:</b> <a href="https://drive.google.com/file/d/19UwYerrt7kXgcqKxBqAubEXXKwHoDoLu/view?usp=share_link">Heinz (2016). <i>Computational theories of learning and developmental psycholinguistics</i> </a>
     </li>
     <li>
         <b>Feb 12</b> Learning Functions <br>
@@ -85,10 +85,17 @@ a:hover {
     </li>
     <li>
         <b>Feb 26</b> Learning Functions <br>
-	<b>Reading:</b> <a href="https://drive.google.com/file/d/15W_x9eT5SBOrEvkrjPR0nFD9O4gPvyvT/view?usp=share_link">Chap.2&3, Chandlee (2014). 'Strictly local phonological processes'</a>
+	<b>Reading:</b> <a href="https://drive.google.com/file/d/15W_x9eT5SBOrEvkrjPR0nFD9O4gPvyvT/view?usp=share_link"> Chap.2&3, Chandlee (2014). <i>Strictly local phonological processes</i>  </a>
     </li>
     <li>
-        <b>Mar 5</b> Learning Functions <br>
+        <b>Mar 5</b> Field trip to Tommi Buder-Grondahl's talk on LLMs <br>
+    </li>
+    <li>
+        <b>Mar 12</b> Learning Functions <br>
+	<b>Reading:</b> <a href="https://drive.google.com/file/d/1Tf8Ruj7E9FSYpGmLLq3SDPlCzZ2It9Kf/view?usp=sharing"> Jardine et al. (2014). <i>Very efficient learning of structured classes of subsequential functions from positive data</i></a>
+	<br>
+	<a href="https://drive.google.com/file/d/1hshav19boDRaNTFWc5P4MXzNizLTZ56Q/view?usp=sharing"> Bhaskar et al. (2020). <i>Boolean monadic recursive schemes as a logical characterization of the subsequential functions</i>
+    </a>
     </li>
     <li>
         <b>Mar 19</b> spring break <br>
