--- a/mathling/index.html
+++ b/mathling/index.html
@@ -101,10 +101,13 @@ a:hover {
         <b>Mar 19</b> spring break <br>
     </li>
     <li>
-        <b>Mar 26</b> Angluin/Probabilistic Gold <br>
+        <b>Mar 26</b> Underlying Form Learning <br>
     </li>
     <li>
-        <b>Apr 9</b> PAC learning <br>
+        <b>Apr 9</b> Underlying Form Learning <br>
+	b>Reading:</b> <a href="https://drive.google.com/file/d/1iy7rAvKoUjQDjWO-ZDt5EgjKjg-_y9SI/view?usp=share_link"> Chandlee & Jardine. <i>Using Locality and Natural Classes to Infer Underlying
+Representations and a Phonological Grammar</i></a>
+	<br>
     </li>
     <li>
         <b>Apr 16</b> TBD <br>
