--- a/mathling/index.html
+++ b/mathling/index.html
@@ -105,7 +105,7 @@ a:hover {
     </li>
     <li>
         <b>Apr 9</b> Underlying Form Learning <br>
-	b>Reading:</b> <a href="https://drive.google.com/file/d/1iy7rAvKoUjQDjWO-ZDt5EgjKjg-_y9SI/view?usp=share_link"> Chandlee & Jardine. <i>Using Locality and Natural Classes to Infer Underlying
+	<b>Reading:</b> <a href="https://drive.google.com/file/d/1iy7rAvKoUjQDjWO-ZDt5EgjKjg-_y9SI/view?usp=share_link"> Chandlee & Jardine. <i>Using Locality and Natural Classes to Infer Underlying
 Representations and a Phonological Grammar</i></a>
 	<br>
     </li>
