--- a/mathling/index.html
+++ b/mathling/index.html
@@ -64,56 +64,24 @@ a:hover {
 
 <hr>
 
-<!------- Spring 2024 SCHEDULE  -------->	
-<h3>Spring 2025 Schedule</h3>
-
+<!------- Fall 2025 SCHEDULE  -------->	
+<h3>Fall 2025 Schedule</h3>
+	
 <p>
-    Wednesday, 11am, Rm 403 at 1 Spring Street
+    every other Tuesday, 11:30am-12:30pm, Rm 108 at 18 Seminary Pl
 </p>
 
 <ul>
     <li>
-        <b>Jan 22</b> Organizational Meeting (joint w/ PhonX)
+        <b>Sept 05</b> Organizational Meeting (joint with PhonX)
     </li>
-    <li>
-        <b>Feb 5</b> Review on Learning <br>
-        <b>Reading:</b> <a href="https://drive.google.com/file/d/19UwYerrt7kXgcqKxBqAubEXXKwHoDoLu/view?usp=share_link">Heinz (2016). <i>Computational theories of learning and developmental psycholinguistics</i> </a>
+	
+	<li>
+        <b>Sept 09</b> Introduction
     </li>
-    <li>
-        <b>Feb 12</b> Learning Functions <br>
-	<b>Meeting Notes:</b> <a href="https://drive.google.com/file/d/1s4JE57-6BzvFzWxPMNHiVElmDsqaSdjN/view?usp=sharing">Introduction to Functions </a>
-    </li>
-    <li>
-        <b>Feb 26</b> Learning Functions <br>
-	<b>Reading:</b> <a href="https://drive.google.com/file/d/15W_x9eT5SBOrEvkrjPR0nFD9O4gPvyvT/view?usp=share_link"> Chap.2&3, Chandlee (2014). <i>Strictly local phonological processes</i>  </a>
-    </li>
-    <li>
-        <b>Mar 5</b> Field trip to Tommi Buder-Grondahl's talk on LLMs <br>
-    </li>
-    <li>
-        <b>Mar 12</b> Learning Functions <br>
-	<b>Reading:</b> <a href="https://drive.google.com/file/d/1Tf8Ruj7E9FSYpGmLLq3SDPlCzZ2It9Kf/view?usp=sharing"> Jardine et al. (2014). <i>Very efficient learning of structured classes of subsequential functions from positive data</i></a>
-	<br>
-	<a href="https://drive.google.com/file/d/1hshav19boDRaNTFWc5P4MXzNizLTZ56Q/view?usp=sharing"> Bhaskar et al. (2020). <i>Boolean monadic recursive schemes as a logical characterization of the subsequential functions</i>
-    </a>
-    </li>
-    <li>
-        <b>Mar 19</b> spring break <br>
-    </li>
-    <li>
-        <b>Mar 26</b> Underlying Form Learning I <br>
-    </li>
-    <li>
-        <b>Apr 9</b> Underlying Form Learning II <br>
-	<b>Reading:</b> <a href="https://drive.google.com/file/d/1iy7rAvKoUjQDjWO-ZDt5EgjKjg-_y9SI/view?usp=share_link"> Chandlee & Jardine. <i>Using Locality and Natural Classes to Infer Underlying
-Representations and a Phonological Grammar</i></a>
-	<br>
-    </li>
-    <li>
-        <b>Apr 16</b> Underlying Form Learning III <br>
-	<b>Reading:</b> <a href="https://drive.google.com/file/d/1iy7rAvKoUjQDjWO-ZDt5EgjKjg-_y9SI/view?usp=share_link"> Chandlee & Jardine. <i>Using Locality and Natural Classes to Infer Underlying
-Representations and a Phonological Grammar</i></a>
-	<br>
+
+	<li>
+        <b>Sept 23</b> TBD
     </li>
 
 </ul>
@@ -126,3 +94,4 @@ Representations and a Phonological Grammar</i></a>
 
 </body>
 </html>
+
