--- a/mathling/index.html
+++ b/mathling/index.html
@@ -73,17 +73,32 @@ a:hover {
 
 <ul>
     <li>
-        <b>Sept 05</b> Organizational Meeting (joint with PhonX)
+        <b>Sep 05</b> Organizational Meeting (joint with PhonX)
     </li>
 	
 	<li>
-        <b>Sept 09</b> Introduction
+        <b>Sep 09</b> Introduction
     </li>
 
 	<li>
-        <b>Sept 23</b> TBD
+        <b>Sep 23</b> Hyunjung – connecting discrete and continuous representations
     </li>
 
+	<li>
+        <b>Oct 07</b> Chenli – learning interacting processes
+    </li>
+
+	<li>
+        <b>Oct 21</b> Neha & Manish – UR learning implementation
+    </li>
+
+	<li>
+        <b>Nov 04</b> Vinny – TBD
+    </li>
+
+	<li>
+		<b>Nov 14-16</b> subregular workshop
+	</li>
 </ul>
 
 <hr>
@@ -94,4 +109,5 @@ a:hover {
 
 </body>
 </html>
+
 
