--- a/mathling/index.html
+++ b/mathling/index.html
@@ -93,11 +93,15 @@ a:hover {
     </li>
 
 	<li>
-        <b>Nov 04</b> Vinny – TBD
+        <b>Nov 04</b> Vinny – Linearisation, Head Movement and Lowering
     </li>
 
 	<li>
 		<b>Nov 14-16</b> subregular workshop
+	</li>
+
+	<li>
+		<b>Dec 02</b> Catherine & Merlin - Topics on Computational Syntax 
 	</li>
 </ul>
 
@@ -109,5 +113,6 @@ a:hover {
 
 </body>
 </html>
+
 
 
