--- a/mathling/index.html
+++ b/mathling/index.html
@@ -93,7 +93,7 @@ a:hover {
     </li>
 
 	<li>
-        <b>Nov 04</b> Vinny – Linearisation, Head Movement and Lowering
+        <b>Nov 04</b> Vinny – linearisation, head movement and lowering
     </li>
 
 	<li>
@@ -101,7 +101,7 @@ a:hover {
 	</li>
 
 	<li>
-		<b>Dec 02</b> Catherine & Merlin - Topics on Computational Syntax 
+		<b>Dec 02</b> Catherine & Merlin - topics on computational syntax 
 	</li>
 </ul>
 
@@ -113,6 +113,7 @@ a:hover {
 
 </body>
 </html>
+
 
 
 
