--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -272,7 +272,7 @@ Building West</a> (the one on the left looking from Seminary Pl), Rm
     flex-direction: row;
     justify-content: center;
     margin-bottom: 1em;
-    font-size: 1.2em;
+    font-size: 1em;
     color: #f7f7f7;
     gap: 1em;
   }
@@ -343,7 +343,7 @@ Building West</a> (the one on the left looking from Seminary Pl), Rm
   <table>
     <tr style="color: #f7f7f7"><th colspan="2">morning</th><th colspan="1"><i>theme: linguistic analysis</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
-    <tr><td>09:00 AM – 09:20 AM</td><td>Elizabeth Garza (?)</td><td></td></tr>
+    <tr><td>09:00 AM – 09:20 AM</td><td>Elizabeth Garza (Stony Brook)</td><td></td></tr>
     <tr><td>09:20 AM – 09:40 AM</td><td>Olanrewaju Samuel (Stony Brook)</td><td><i>Yagba nasal and ATR harmony</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>09:40 AM – 09:50 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>09:50 AM – 10:10 AM</td><td>Geonhee Lee (Stony Brook)</td><td><i>maybe nanti</i></td></tr>
