--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -308,6 +308,10 @@ Building West</a> (the one on the left looking from Seminary Pl), Rm
     padding: 6px;
     text-align: left;
   }
+  th[colspan] {
+    background-color: #B3002D;
+    font-size: 1.2em;
+  }
 th:nth-child(1),
 td:nth-child(1) {
   width: 21%;            /* Time column */
@@ -321,11 +325,7 @@ td:nth-child(2) {
 th:nth-child(3),
 td:nth-child(3) {
   width: 40%;            /* Title column */
-  word-wrap: break-word; /* wraps long titles nicely */
-  th[colspan] {
-    background-color: #B3002D;
-    font-size: 1.2em;
-  }
+  word-wrap: break-word; 
 </style>
 
 
