--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -255,10 +255,15 @@ EDT</span></p>
 <hr />
 <div id="date-and-location" class="section level3">
 <h3>Date and location</h3>
-<p>November 14-16th, 2025 <br> <a
+<p>November 14th, 2025: <span style="color:#B3002D"><b>Rm ABW-4052</b></span>
+       <br>
+November 15-16th, 2025: <span style="color:#B3002D"><b>Rm ABW-1170</b></span>
+       <br> 
+<a
 href="https://www.google.com/maps/place/Rutgers+Academic+Building/@40.5016957,-74.4486641,19z/data=!3m1!4b1!4m5!3m4!1s0x89c3c654968a5905:0xf670657786227229!8m2!3d40.5016947!4d-74.4481169?shorturl=1">Academic
-Building West</a> (the one on the left looking from Seminary Pl), Rm
-4052<br> Seminary Pl, New Brunswick, NJ</p>
+Building West</a> (the one on the left looking from Seminary Pl)
+       <br>
+Seminary Pl, New Brunswick, NJ</p>
 <hr />
 </div>
 <div id="schedule" class="section level3">
@@ -341,12 +346,12 @@ td:nth-child(3) {
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
     <tr><td>01:30 PM – 01:40 PM</td><td colspan="2" style="text-align:center;"><b><i>opening remarks</i></b></td></tr>
     <tr><td>01:40 PM – 02:00 PM</td><td>Matthew Hayden (Stony Brook)</td><td></td></tr>
-    <tr><td>02:00 PM – 02:20 PM</td><td>Abed Qaddoumi (Stony Brook)</td><td><i>BUFIA + PLEBBY Arabic stress; plus pipeline software</i></td></tr>
+    <tr><td>02:00 PM – 02:20 PM</td><td>Abed Qaddoumi (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>02:20 PM – 02:30 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>02:30 PM – 03:15 PM</td><td>Neha Jeyaram & Manish Kandepalli (Rutgers)</td><td><i>implementations of SI2DLA</i></td></tr>
-    <tr><td>03:15 PM – 04:00 PM</td><td>Jacob Rowen (Stony Brook)</td><td><i>MSO transductions software tutorial</i></td></tr>
+    <tr><td>02:30 PM – 03:15 PM</td><td>Neha Jeyaram & Manish Kandepalli (Rutgers)</td><td><i></i></td></tr>
+    <tr><td>03:15 PM – 04:00 PM</td><td>Jacob Rowen (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>04:00 PM – 04:15 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>04:15 PM – 05:15 PM</td><td>Jeff Heinz (Stony Brook)</td><td><i>evaluating learned morpho-phon grammars (Lex, Morph, Phon)</i></td></tr>
+    <tr><td>04:15 PM – 05:15 PM</td><td>Jeff Heinz (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>05:15 PM</td><td colspan="2" style="text-align:center;"><b><i>dinner</i></b></td></tr>
   </table>
 </div>
@@ -357,26 +362,26 @@ td:nth-child(3) {
     <tr style="color: #f7f7f7"><th colspan="2">morning</th><th colspan="1"><i>theme: linguistic analysis</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
     <tr><td>09:00 AM – 09:20 AM</td><td>Elizabeth Garza (Stony Brook)</td><td></td></tr>
-    <tr><td>09:20 AM – 09:40 AM</td><td>Olanrewaju Samuel (Stony Brook)</td><td><i>Yagba nasal and ATR harmony</i></td></tr>
+    <tr><td>09:20 AM – 09:40 AM</td><td>Olanrewaju Samuel (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>09:40 AM – 09:50 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>09:50 AM – 10:10 AM</td><td>Geonhee Lee (Stony Brook)</td><td><i>maybe nanti</i></td></tr>
-    <tr><td>10:10 AM – 10:30 AM</td><td>Michael Hayes (Michigan)</td><td><i>meter</i></td></tr>
+    <tr><td>09:50 AM – 10:10 AM</td><td>Geonhee Lee (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>10:10 AM – 10:30 AM</td><td>Michael Hayes (Michigan)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>10:30 AM – 10:40 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>10:40 AM – 11:00 AM</td><td>Hyunjung Joo (Rutgers)</td><td><i>phonetics/phonology interaction in intonation</i></td></tr>
-    <tr><td>11:00 AM – 11:20 AM</td><td>Anton Hampe (Yale)</td><td><i>word equations</i></td></tr>
+    <tr><td>10:40 AM – 11:00 AM</td><td>Hyunjung Joo (Rutgers)</td><td><i></i></td></tr>
+    <tr><td>11:00 AM – 11:20 AM</td><td>Anton Hampe (Yale)</td><td><i></i></td></tr>
     <tr><td>11:20 AM – 01:15 PM</td><td colspan="2" style="text-align:center;"><b><i>lunch</i></b></td></tr>
-    <tr style="color: #f7f7f7"><th colspan="2">afternoon</th><th colspan="1"><i>theme: linguistic algorithm</i></th></tr>
+    <tr style="color: #f7f7f7"><th colspan="2">afternoon</th><th colspan="1"><i>theme: linguistic algorithms</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
-    <tr><td>01:15 PM – 01:45 PM</td><td>Magdalena Markowska (Stony Brook)</td><td><i>learning processes from small data with features</i></td></tr>
-    <tr><td>01:45 PM – 02:15 PM</td><td>Han Li (Stony Brook)</td><td><i>BUFIA for tone</i></td></tr>
+    <tr><td>01:15 PM – 01:45 PM</td><td>Magdalena Markowska (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>01:45 PM – 02:15 PM</td><td>Han Li (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>02:15 PM – 02:30 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>02:30 PM – 03:00 PM</td><td>Chenli Wang (Rutgers)</td><td><i>learning phonological interactions</i></td></tr>
-    <tr><td>03:00 PM – 03:30 PM</td><td>Ben Evans (Stony Brook)</td><td><i>decomposition</i></td></tr>
+    <tr><td>02:30 PM – 03:00 PM</td><td>Chenli Wang (Rutgers)</td><td><i></i></td></tr>
+    <tr><td>03:00 PM – 03:30 PM</td><td>Ben Evans (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>03:30 PM – 03:45 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>03:45 PM – 04:15 PM</td><td>Daniar (NYU)</td><td><i>learning underspecified forms in LP</i></td></tr>
+    <tr><td>03:45 PM – 04:15 PM</td><td>Daniar (NYU)</td><td><i></i></td></tr>
     <tr><td>04:15 PM – 04:45 PM</td><td>Sarah Payne (Stony Brook)</td><td></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>04:45 PM – 05:00 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>05:00 PM – 06:00 PM</td><td>Kyle Gorman (CUNY)</td><td><i>Invited Talk</i></td></tr>
+    <tr><td>05:00 PM – 06:00 PM</td><td>Kyle Gorman (CUNY)</td><td><i>invited talk</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>06:30 PM</td><td colspan="2" style="text-align:center;"><b><i>dinner</i></b></td></tr>
   </table>
 </div>
@@ -386,11 +391,11 @@ td:nth-child(3) {
   <table>
     <tr style="color: #f7f7f7"><th colspan="2">morning</th><th colspan="1"><i>theme: syntax/semantics</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
-    <tr><td>09:15 AM – 09:45 AM</td><td>Paul Petroski (Rutgers)</td><td><i>restricted logic</i></td></tr>
-    <tr><td>09:45 AM – 10:15 AM</td><td>M Love (Stony Brook)</td><td><i>semantic objects</i></td></tr>
+    <tr><td>09:15 AM – 09:45 AM</td><td>Paul Petroski (Rutgers)</td><td><i></i></td></tr>
+    <tr><td>09:45 AM – 10:15 AM</td><td>M Love (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>10:15 AM – 10:30 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>10:30 AM – 11:00 AM</td><td>Logan Swanson (Stony Brook)</td><td><i>MTSL2 over trees/strings</i></td></tr>
-    <tr><td>11:00 AM – 11:30 AM</td><td>Vincent Czarnecki (Rutgers)</td><td><i>syntax-phonology interface</i></td></tr>
+    <tr><td>10:30 AM – 11:00 AM</td><td>Logan Swanson (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>11:00 AM – 11:30 AM</td><td>Vincent Czarnecki (Rutgers)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>11:30 AM – 11:45 AM</td><td colspan="2" style="text-align:center;"><b><i>closing remarks</i></b></td></tr>
   </table>
 </div>
