small wording change

--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -359,7 +359,7 @@ td:nth-child(3) {
 <!-- Day 2 -->
 <div id="day2" class="tab-content">
   <table>
-    <tr style="color: #f7f7f7"><th colspan="2">morning</th><th colspan="1"><i>theme: linguistic analysis</i></th></tr>
+    <tr style="color: #f7f7f7"><th colspan="2">morning</th><th colspan="1"><i>theme: linguistic analyses</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
     <tr><td>09:00 AM – 09:20 AM</td><td>Elizabeth Garza (Stony Brook)</td><td></td></tr>
     <tr><td>09:20 AM – 09:40 AM</td><td>Olanrewaju Samuel (Stony Brook)</td><td><i></i></td></tr>
@@ -370,7 +370,7 @@ td:nth-child(3) {
     <tr><td>10:40 AM – 11:00 AM</td><td>Hyunjung Joo (Rutgers)</td><td><i></i></td></tr>
     <tr><td>11:00 AM – 11:20 AM</td><td>Anton Hampe (Yale)</td><td><i></i></td></tr>
     <tr><td>11:20 AM – 01:15 PM</td><td colspan="2" style="text-align:center;"><b><i>lunch</i></b></td></tr>
-    <tr style="color: #f7f7f7"><th colspan="2">afternoon</th><th colspan="1"><i>theme: linguistic algorithms</i></th></tr>
+    <tr style="color: #f7f7f7"><th colspan="2">afternoon</th><th colspan="1"><i>theme: learning algorithms</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
     <tr><td>01:15 PM – 01:45 PM</td><td>Magdalena Markowska (Stony Brook)</td><td><i></i></td></tr>
     <tr><td>01:45 PM – 02:15 PM</td><td>Han Li (Stony Brook)</td><td><i></i></td></tr>
