Fixed some errors

--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -365,7 +365,7 @@ td:nth-child(3) {
     <tr><td>09:20 AM – 09:40 AM</td><td>Olanrewaju Samuel (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>09:40 AM – 09:50 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>09:50 AM – 10:10 AM</td><td>Geonhee Lee (Stony Brook)</td><td><i></i></td></tr>
-    <tr><td>10:10 AM – 10:30 AM</td><td>Michael Hayes (Michigan)</td><td><i></i></td></tr>
+    <tr><td>10:10 AM – 10:30 AM</td><td>Mikhael Hayes (Illinois)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>10:30 AM – 10:40 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>10:40 AM – 11:00 AM</td><td>Hyunjung Joo (Rutgers)</td><td><i></i></td></tr>
     <tr><td>11:00 AM – 11:20 AM</td><td>Anton Hampe (Yale)</td><td><i></i></td></tr>
