--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -345,8 +345,8 @@ td:nth-child(3) {
     <tr style="color: #f7f7f7"><th colspan="2">afternoon</th><th colspan="1"><i>theme: software</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
     <tr><td>01:30 PM – 01:40 PM</td><td colspan="2" style="text-align:center;"><b><i>opening remarks</i></b></td></tr>
-    <tr><td>01:40 PM – 02:00 PM</td><td>Matthew Hayden (Stony Brook)</td><td></td></tr>
-    <tr><td>02:00 PM – 02:20 PM</td><td>Abed Qaddoumi (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>01:40 PM – 02:00 PM</td><td>Anton Hampe (Yale)</td><td><i></i></td></tr>
+    <tr><td>02:00 PM – 02:20 PM</td><td>Matthew Hayden (Stony Brook)</td><td></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>02:20 PM – 02:30 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>02:30 PM – 03:15 PM</td><td>Neha Jeyaram & Manish Kandepalli (Rutgers)</td><td><i></i></td></tr>
     <tr><td>03:15 PM – 04:00 PM</td><td>Jacob Rowen (Stony Brook)</td><td><i></i></td></tr>
@@ -368,7 +368,7 @@ td:nth-child(3) {
     <tr><td>10:10 AM – 10:30 AM</td><td>Mikhael Hayes (Illinois)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>10:30 AM – 10:40 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>10:40 AM – 11:00 AM</td><td>Hyunjung Joo (Rutgers)</td><td><i></i></td></tr>
-    <tr><td>11:00 AM – 11:20 AM</td><td>Anton Hampe (Yale)</td><td><i></i></td></tr>
+    <tr><td>11:00 AM – 11:20 AM</td><td>Abed Qaddoumi (Stony Brook)</td><td><i></i></td></tr>
     <tr><td>11:20 AM – 01:15 PM</td><td colspan="2" style="text-align:center;"><b><i>lunch</i></b></td></tr>
     <tr style="color: #f7f7f7"><th colspan="2">afternoon</th><th colspan="1"><i>theme: learning algorithms</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
